{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "1a3c8c59-046c-474d-a203-11a53b88f1d1",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "96627b6b-e6e5-4b9d-9356-79283a1b6d33",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "847143d2-4ec9-4276-adcf-b1c243351b9b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1b4db8ff-5dee-4cb8-b7fa-e4c63abc410d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ab5d1b01-b146-4a14-b1e7-9a987630de97",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "797d3d07-195f-4920-860c-49b95eeca008",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7c58f516-17d8-4864-9ee6-c61ea4b227c0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "08669f7e-f10a-4170-a1d6-b83e8ae0181e",
            "actions": [
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "9190261a-ae8f-4a48-9951-293503139fbd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "31fba8d4-9f9e-40c0-a93a-b3c1a76285cf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aeb905d2-1f0f-452d-914e-13a7e3d77bc2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe39d5c2-8e4c-44fb-a175-bc4760e11107",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseControls",
            "id": "30422aed-fc84-4ef9-b05f-757fa8933c2a",
            "actions": [
                {
                    "name": "BreakContinue",
                    "type": "Button",
                    "id": "e230d5dc-1728-46b4-99e7-dbe722fe4b30",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "72714769-f2ba-47db-b7eb-99c32e654c79",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BreakContinue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3593c4bb-e128-4333-a5a2-a19ee87a33c5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BreakContinue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c34d4afe-1d6b-4968-be1e-13539d854909",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BreakContinue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Skills",
            "id": "994cc1ee-7cdb-4906-a0f1-73c06834ec2b",
            "actions": [
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "59b9292b-2f2d-4eea-82ac-0623144fa5a2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Transform",
                    "type": "Button",
                    "id": "35b09753-1ae0-4aa2-9661-e84606f39b39",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2283ba63-61fe-4c84-8daf-3f948f795268",
                    "path": "<Keyboard>/g",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68b0aca5-d9ab-4e4a-a1c3-29c64f4bc2b7",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Transform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d691512-55d0-4030-99dd-c87234735c0e",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Transform",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}